--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starbase",
+  "name": "launchpad",
   "version": "0.0.1",
   "description": "Manage and set up a development environment for Bitwarden",
   "main": "index.js",
