feat: add ability to run `ci` in clients repo. Automatically sets up nvm

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "Manage and set up a development environment for Bitwarden",
   "main": "index.js",
   "scripts": {
+    "preinstall": "echo 'running install in root'",
     "init": "ts-node src/scripts/init.ts",
-    "clone": "ts-node src/scripts/clone.ts"
+    "clone": "ts-node src/scripts/clone.ts",
+    "install-deps": "ts-node src/scripts/install-deps.ts"
   },
   "author": "Andreas Coroiu (@coroiu)",
   "license": "ISC",
