--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "preinstall": "echo 'running install in root'",
     "init": "ts-node src/scripts/init.ts",
     "clone": "ts-node src/scripts/clone.ts",
-    "install-deps": "ts-node src/scripts/install-deps.ts"
+    "install-deps": "ts-node src/scripts/install-deps.ts",
+    "dev:web": "cd repositories/clients/apps/web && npm run build:bit:dev:watch",
+    "dev:browser": "cd repositories/clients/apps/browser && npm run build:watch",
+    "dev:browser:mv2": "cd repositories/clients/apps/browser && npm run build:watch:mv2",
+    "dev:browser:mv3": "npm run dev:browser"
   },
   "author": "Andreas Coroiu (@coroiu)",
   "license": "ISC",
