--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Manage and set up a development environment for Bitwarden",
   "main": "index.js",
   "scripts": {
-    "concurrent": "concurrently \"npm run dev:web\" \"npm run dev:browser\"",
+    "parallelize": "ts-node src/scripts/parallelize",
     "init:custom-env": "cp -n custom-env.example.ts .custom-env.ts",
     "preinstall": "npm run init:custom-env",
     "init": "ts-node src/scripts/init.ts",
@@ -13,7 +13,8 @@
     "dev:web": "cd repositories/clients/apps/web && npm run build:bit:dev:watch",
     "dev:browser": "cd repositories/clients/apps/browser && npm run build:watch",
     "dev:browser:mv2": "cd repositories/clients/apps/browser && npm run build:watch:mv2",
-    "dev:browser:mv3": "npm run dev:browser"
+    "dev:browser:mv3": "npm run dev:browser",
+    "dev:web_browser": "npm run parallelize -- \"npm run dev:web\" \"npm run dev:browser\""
   },
   "author": "Andreas Coroiu (@coroiu)",
   "license": "ISC",
@@ -21,6 +22,7 @@
     "chalk": "^4.1.2",
     "commander": "^12.1.0",
     "inquirer": "^11.0.2",
+    "string-to-color": "^2.2.2",
     "ts-deepmerge": "^7.0.1",
     "ts-node": "^10.9.2",
     "type-fest": "^4.26.1",
