fix: alias scripts not running with launchpad profile

--- a/package.json
+++ b/package.json
@@ -5,16 +5,17 @@
   "main": "index.js",
   "scripts": {
     "parallelize": "ts-node src/scripts/parallelize",
+    "shell": "ts-node src/scripts/shell",
     "init:custom-env": "cp -n custom-env.example.ts .custom-env.ts",
     "preinstall": "npm run init:custom-env",
     "init": "ts-node src/scripts/init.ts",
     "clone": "ts-node src/scripts/clone.ts",
     "install-deps": "ts-node src/scripts/install-deps.ts",
-    "dev:api": "cd repositories/server/src/Api && dotnet run",
-    "dev:identity": "cd repositories/server/src/Identity && dotnet run",
-    "dev:web": "cd repositories/clients/apps/web && npm run build:bit:dev:watch",
-    "dev:browser": "cd repositories/clients/apps/browser && npm run build:watch",
-    "dev:browser:mv2": "cd repositories/clients/apps/browser && npm run build:watch:mv2",
+    "dev:api": "npm run shell -- 'cd repositories/server/src/Api && dotnet run'",
+    "dev:identity": "npm run shell -- 'cd repositories/server/src/Identity && dotnet run'",
+    "dev:web": "npm run shell -- 'cd repositories/clients/apps/web && npm run build:bit:dev:watch'",
+    "dev:browser": "npm run shell -- 'cd repositories/clients/apps/browser && npm run build:watch'",
+    "dev:browser:mv2": "npm run shell -- 'cd repositories/clients/apps/browser && npm run build:watch:mv2'",
     "dev:browser:mv3": "npm run dev:browser",
     "dev:web_browser": "npm run parallelize -- \"npm run dev:web\" \"npm run dev:browser\"",
     "dev:api_identity_web_browser": "npm run parallelize -- \"npm run dev:api\" \"npm run dev:identity\" \"npm run dev:web\" \"npm run dev:browser\""
