chore: switch to esm

--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.1",
   "description": "Manage and set up a development environment for Bitwarden",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "parallelize": "ts-node src/scripts/parallelize",
-    "shell": "ts-node src/scripts/shell",
+    "parallelize": "tsx src/scripts/parallelize",
+    "shell": "tsx src/scripts/shell",
     "init:custom-env": "cp -n custom-env.example.ts .custom-env.ts",
     "preinstall": "npm run init:custom-env",
-    "init": "ts-node src/scripts/init.ts",
-    "clone": "ts-node src/scripts/clone.ts",
-    "install-deps": "ts-node src/scripts/install-deps.ts",
+    "init": "tsx src/scripts/init.ts",
+    "clone": "tsx src/scripts/clone.ts",
+    "install-deps": "tsx src/scripts/install-deps.ts",
     "dev:api": "npm run shell -- 'cd repositories/server/src/Api && dotnet run'",
     "dev:identity": "npm run shell -- 'cd repositories/server/src/Identity && dotnet run'",
     "dev:web": "npm run shell -- 'cd repositories/clients/apps/web && npm run build:bit:dev:watch'",
@@ -24,12 +25,14 @@
   "author": "Andreas Coroiu (@coroiu)",
   "license": "ISC",
   "dependencies": {
+    "@topcli/spinner": "^2.1.2",
     "chalk": "^4.1.2",
     "commander": "^12.1.0",
     "inquirer": "^11.0.2",
+    "ora": "^8.1.0",
     "string-to-color": "^2.2.2",
     "ts-deepmerge": "^7.0.1",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.1",
     "type-fest": "^4.26.1",
     "typescript": "^5.6.2"
   }
