feat: add support for developing SDK + desktop

--- a/package.json
+++ b/package.json
@@ -7,19 +7,22 @@
   "scripts": {
     "parallelize": "tsx src/scripts/parallelize",
     "shell": "tsx src/scripts/shell",
-    "init:custom-env": "cp -n custom-env.example.ts .custom-env.ts",
+    "init:custom-env": "cp -n custom-env.example.ts .custom-env.ts || true",
     "preinstall": "npm run init:custom-env",
     "init": "tsx src/scripts/init.ts",
     "setup-environment": "tsx src/scripts/setup-environment.ts",
     "clone": "tsx src/scripts/clone.ts",
     "install-deps": "tsx src/scripts/install-deps.ts",
+    "build:sdk": "npm run shell -- repositories/sdk/crates/bitwarden-wasm-internal/build.sh",
     "dev:api": "npm run shell -- 'cd repositories/server/src/Api && dotnet run'",
     "dev:identity": "npm run shell -- 'cd repositories/server/src/Identity && dotnet run'",
+    "dev:sdk": "chokidar 'repositories/sdk/**/*.(rs)' -c 'repositories/sdk/crates/bitwarden-wasm-internal/build.sh'",
     "dev:web": "npm run shell -- 'cd repositories/clients/apps/web && npm run build:bit:dev:watch'",
     "dev:browser": "npm run shell -- 'cd repositories/clients/apps/browser && npm run build:watch'",
     "dev:browser:mv2": "npm run shell -- 'cd repositories/clients/apps/browser && npm run build:watch:mv2'",
     "dev:browser:mv3": "npm run dev:browser",
     "dev:desktop": "npm run shell -- 'cd repositories/clients/apps/desktop && npm run electron'",
+    "dev:sdk_desktop": "npm run build:sdk && npm run parallelize -- \"npm run dev:sdk\" \"npm run dev:desktop\"",
     "dev:web_browser": "npm run parallelize -- \"npm run dev:web\" \"npm run dev:browser\"",
     "dev:api_identity_web_browser": "npm run parallelize -- \"npm run dev:api\" \"npm run dev:identity\" \"npm run dev:web\" \"npm run dev:browser\""
   },
@@ -27,6 +30,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^4.1.2",
+    "chokidar-cli": "^3.0.0",
     "commander": "^12.1.0",
     "inquirer": "^11.0.2",
     "ora": "^8.1.0",
